--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -174,13 +174,22 @@
                   </thead>
                   <tbody>
                     <tr>
+                      <td>4.3.x</td>
+                      <td>7</td>
+                      <td>8 / 9 / 10 / 11</td>
+                      <td class="text-success">On Development</td>
+                      <td></td>
+                      <td>4.3.0.RC1</td>
+                      <td>2 Mar 19</td>
+                    </tr>
+                    <tr>
                       <td>4.2.x</td>
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
                       <td class="text-success">Stable</td>
                       <td>4.2.2</td>
                       <td>4.2.3</td>
-                      <td>23 Mar 19</td>
+                      <td>9 Feb 19</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -189,7 +198,7 @@
                         <td class="text-success">Stable</td>
                         <td>4.1.7</td>
                         <td>4.1.8</td>
-                        <td>1 Feb 19</td>
+                        <td>9 Feb 19</td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
@@ -334,20 +343,28 @@
                   </thead>
                   <tbody>
                     <tr>
+                      <td>4.2.x</td>
+                      <td>4.2.x</td>
+                      <td class="text-success">On Development</td>
+                      <td></td>
+                      <td>4.2.0</td>
+                      <td>12 Feb 2019</td>
+                    </tr>
+                    <tr>
                       <td>4.1.x</td>
                       <td>4.1.x / 4.2.x</td>
                       <td class="text-success">Stable</td>
                       <td>4.1.2</td>
                       <td>4.1.3</td>
-                      <td>12 Jan 2019</td>
+                      <td>12 Feb 2019</td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
                         <td>4.0.x</td>
                         <td class="text-success">Stable</td>
                         <td>4.0.5</td>
-                        <td>4.0.6</td>
-                        <td>12 Jan 2019</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>3.0.x</td>
@@ -442,12 +459,20 @@
                   </thead>
                   <tbody>
                     <tr>
+                      <td>4.2.x</td>
+                      <td>4.2.x</td>
+                      <td class="text-success">On Development</td>
+                      <td></td>
+                      <td>4.2.0</td>
+                      <td>21 Mar 19</td>
+                    </tr>
+                    <tr>
                       <td>4.1.x</td>
                       <td>4.1.x</td>
                       <td class="text-success">Stable</td>
                       <td>4.1.2</td>
-                      <td>4.1.3</td>
-                      <td>21 Mar 19</td>
+                      <td></td>
+                      <td></td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
@@ -526,7 +551,7 @@
                         <td class="text-success">Stable</td>
                         <td>2.1.0</td>
                         <td>2.2.0</td>
-                        <td>14 Dec 18</td>
+                        <td>14 Feb 19</td>
                     </tr>
                   </tbody>
                 </table>
