--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Runtime 4.2.3 has been released! (11/2/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Cave 4.1.2 has been released! (21/1/19)</strong> - This is an update patch for Apache Cave 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -113,13 +120,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Cellar 4.0.5 has been released! (12/10/18)</strong> - This is an update patch for Apache Cellar 4.0.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Decanter 2.1.0 has been released! (12/9/18)</strong> - This is an update patch for Apache Decanter 2.x.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
             <h2 class="featurette-heading">Run your applications in <span class="text-muted">Karaf Runtime</span></h2>
             <p class="lead">Karaf is a lightweight, powerful, and enterprise ready application runtime. It provides all the ecosystem and bootstrapping options you need for your applications.
             By polymorphic, it means that Karaf can host any kind of applications: WAR, OSGi, Spring, and much more.</p>
-            <p>Last version <strong>4.2.2</strong> - (18/12/18)</p>
+            <p>Last version <strong>4.2.3</strong> - (11/2/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5">
