--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -79,9 +79,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.2</a>
+                <a class="text-dark">Karaf Runtime 4.2.3</a>
               </h3>
-              <div class="mb-1 text-muted">December 18, 2018</div>
+              <div class="mb-1 text-muted">February 11, 2019</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -101,6 +101,102 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.3 has been released ! <span class="text-muted">February 11, 2019</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add operation to get features contained in a feature repository</li>
+                  <li>Service wrapper should add selected JAVA_HOME also to the PATH variable</li>
+                  <li>Enhance bundle report to reflect effective installed features for custom distributions</li>
+                  <li>Create Aries JAXRS whiteboard example</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>pax-transx</strong></td>
+                      <td>0.4.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Aries Proxy Impl</strong></td>
+                      <td>1.1.4</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-web</strong></td>
+                      <td>7.2.7</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jaxb</strong></td>
+                      <td>2.3.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>itstack-commons-runtime</strong></td>
+                      <td>3.0.8</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Aries JPA</strong></td>
+                      <td>2.7.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix Gogo</strong></td>
+                      <td>1.1.4</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Maven Wagon</strong></td>
+                      <td>3.3.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>awaitility</strong></td>
+                      <td>3.1.5</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Narayana</strong></td>
+                      <td>5.9.2.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-cdi</strong></td>
+                      <td>1.1.0</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-jms</strong></td>
+                      <td>1.0.3</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-jdbc</strong></td>
+                      <td>1.3.3</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-transx</strong></td>
+                      <td>0.4.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>pax-web</strong></td>
+                      <td>7.2.7</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Hibernate</strong></td>
+                      <td>5.2.17.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix Framework</strong></td>
+                      <td>5.6.12</td>
+                    </tr>
+                    <tr>
+                      <td><strong>javax.annotation</strong></td>
+                      <td>1.3</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344587" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cave 4.1.2 has been released ! <span class="text-muted">January 21, 2019</span></h3>
