--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,12 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Cellar 4.1.3 has been released! (25/02/19)</strong> - This is an update patch for Apache Cellar 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.3 has been released! (11/2/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -221,7 +227,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar.</span></h2>
             <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
-            <p>Last version <strong>4.1.2</strong> - (12/10/18)</p>
+            <p>Last version <strong>4.1.3</strong> - (25/02/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
