--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -202,6 +202,19 @@
               </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Cellar 4.1.3 has been released ! <span class="text-muted">February 25, 2019</span></h3>
+                <p>This is a major maintenance release on Cellar 4.1.x series. Especially, it provides:</p>
+                <ul>
+                  <li>Slave cluster searches log on Master's log path</li>
+                  <li>Setting node alias breaks synchonization</li>
+                  <li>Extend http service version range in Cellar load balancer</li>
+                </ul>
+                <p>and much more !</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341724" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cave 4.1.2 has been released ! <span class="text-muted">January 21, 2019</span></h3>
                 <p>This is a major maintenance release on Cave 4.1.x series. Especially, it provides:</p>
                 <ul>
