Update stories.html to include ref
Change stories.html to include reference to wizzio - digital banking platform

--- a/src/main/webapp/stories.html
+++ b/src/main/webapp/stories.html
@@ -175,7 +175,15 @@
               <a href="https://www.redhat.com/en/technologies/jboss-middleware/fuse/" target="_blank">https://www.redhat.com/en/technologies/jboss-middleware/fuse/</a>
             </div>
         </div>
-
+        
+        <div class="row mb-5 mt-5">
+            <div class="col">
+              <h4 class="pb-3 mb-4">Wizzio</h4>
+              <p>Digital Banking Platform from Novabase.</p>
+              <a href="http://www.novabase.com/financial/wizzio/" target="_blank">http://www.novabase.com/financial/wizzio/</a>
+            </div>
+        </div>
+        
       </div><!-- Run on Karaf -->
 
       <div class="container">
