--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
 
-    <title>Apache Karaf - The enterprise class platform</title>
+    <title>Apache Karaf - The cloud and on-premise enterprise application runtime</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,9 +67,9 @@
       <div class="container-fluid product pt-5 pb-5 mx-auto">
         <div class="row pt-5 pb-5">
           <div class="col pt-5 pb-5 mx-auto text-center">
-            <h1 class="display-4 text-uppercase">Upgrade to the Enterprise class platform</h1>
-            <p class="lead">Karaf provides dual polymorphic runtime and application bootstrapping paradigms to the Enterprise.<br>
-            Focus on your business code and application, Karaf deals with the rest</p>
+            <h1 class="display-4 text-uppercase">Enterprise runtime on prem and on cloud</h1>
+            <p class="lead">Karaf provides polymorphic applications runtime on premise and cloud for the Enterprise.<br>
+            Focus on your business code and applications, Apache Karaf deals with the rest</p>
           </div>
         </div>
       </div>
@@ -156,8 +156,8 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <h1><i class="fas fa-cloud"></i></h1>
-            <h3>Turnkey embedded mode</h3>
-            <p>Run anywhere (on any machine with Java, cloud, docker images) using karaf-boot and embedded mode.</p>
+            <h3>On cloud or on premise</h3>
+            <p>Run anywhere (on any machine with Java, cloud, docker images) using Karaf powered distributions.</p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -168,8 +168,8 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Run your applications in <span class="text-muted">Karaf Runtime</span></h2>
-            <p class="lead">Karaf is a lightweight, powerful, and enterprise ready application runtime. It provides all the ecosystem and bootstrapping options you need for your applications.
+            <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
+            <p class="lead">Karaf is a lightweight, powerful, and enterprise ready applications runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
             By polymorphic, it means that Karaf can host any kind of applications: WAR, OSGi, Spring, and much more.</p>
             <p>Last version <strong>4.2.3</strong> - (11/2/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
