--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
 
-    <title>Apache Karaf - The cloud and on-premise enterprise application runtime</title>
+    <title>Apache Karaf - Enterprise runtime everywhere</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,8 +67,8 @@
       <div class="container-fluid product pt-5 pb-5 mx-auto">
         <div class="row pt-5 pb-5">
           <div class="col pt-5 pb-5 mx-auto text-center">
-            <h1 class="display-4 text-uppercase">Enterprise runtime on prem and on cloud</h1>
-            <p class="lead">Karaf provides polymorphic applications runtime on premise and cloud for the Enterprise.<br>
+            <h1 class="display-4 text-uppercase">Enterprise runtime everywhere</h1>
+            <p class="lead">Karaf provides polymorphic applications runtime for the enterprise, running on premise or on cloud.<br>
             Focus on your business code and applications, Apache Karaf deals with the rest</p>
           </div>
         </div>
