--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,6 +91,7 @@
               </div>
             </div>
           </div>
+          <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.3 has been released! (11/2/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
