--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -106,6 +106,63 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.4 has been released ! <span class="text-muted">March 18, 2019</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Ensure karaf-maven-plugin can honor start-level for bootBundles</li>
+                  <li>Allow to override/blacklist some features for VerifyMojo</li>
+                  <li>Add skip option to karaf-maven-plugin</li>
+                  <li>Improve shell:exit help message</li>
+                  <li>FeaturesProcessorImpl improvement for bundle override</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>Aries JPA</strong></td>
+                      <td>2.7.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix ConfigAdmin</strong></td>
+                      <td>1.9.14</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>5.1.5.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>4.3.22.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix SCR</strong></td>
+                      <td>2.1.16</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Awaitility</strong></td>
+                      <td>3.1.6</td>
+                    </tr>
+                    <tr>
+                      <td><strong>ASM</strong></td>
+                      <td>7.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jline</strong></td>
+                      <td>3.10.0</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344856" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.3 has been released ! <span class="text-muted">February 11, 2019</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
