--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Decanter 2.2.0 has been released! (21/3/19)</strong> - This is the first minor release for Apache Decanter 2.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.4 has been released! (18/3/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -123,13 +130,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.1.7 has been released! (30/11/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Cellar 4.1.2 has been released! (12/10/18)</strong> - This is an update patch for Apache Cellar 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -278,7 +278,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Monitoring, alerting, and BAM with <span class="text-muted">Karaf Decanter.</span></h2>
             <p class="lead">You need a monitoring solution for Karaf and related ? You need a BAM (Business Activity Monitoring) platform for your application ? Karaf Decanter can be very convenient for you ! Decanter provides ready to use monitoring solution. It's also completely extensible and customizable.</p>
-            <p>Last version <strong>2.1.0</strong> - (12/09/18)</p>
+            <p>Last version <strong>2.2.0</strong> - (22/3/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
