--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -106,6 +106,45 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.2.0 has been released ! <span class="text-muted">March 22, 2019</span></h3>
+                <p>This is a first minor release for Apache Decanter 2.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add websocket appender</li>
+                  <li>Add InfluxDB appender</li>
+                  <li>Add TimescaleDB appender</li>
+                  <li>Add SOAP collector</li>
+                  <li>Improve the API Parser adding key data as parameter</li>
+                  <li>Be able to add property filters on appenders</li>
+                  <li>Be able to define the marshaller in log appender</li>
+                  <li>Reuse existing karafName, hostAddress, hostName if exist in "bridgeable" collectors</li>
+                  <li>Kafka appender should perform send().get()</li>
+                  <li>Provide split and regex parsers</li>
+                  <li>REST collector should populate the status code when connection doesn't work</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>Netty and netty handler versions in Karaf Decanter Cassandra</strong></td>
+                      <td>4.0.37.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring-boot</strong></td>
+                      <td>2.1.3.RELEASE</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344040" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.4 has been released ! <span class="text-muted">March 18, 2019</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
