--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -70,19 +70,19 @@
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.4</span></h3>
-              <div class="mb-1 text-muted">March 18, 2019</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.5</span></h3>
+              <div class="mb-1 text-muted">April 21 2019</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.4/apache-karaf-4.2.4.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.4/apache-karaf-4.2.4.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.4/apache-karaf-4.2.4.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.5/apache-karaf-4.2.5.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.5/apache-karaf-4.2.5.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.5/apache-karaf-4.2.5.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.4/apache-karaf-4.2.4-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.5/apache-karaf-4.2.5-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5-src.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.5/apache-karaf-4.2.5-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.5/apache-karaf-4.2.5-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344856" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345153" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -190,9 +190,9 @@
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
                       <td class="text-success">Stable</td>
-                      <td>4.2.4</td>
                       <td>4.2.5</td>
-                      <td>18 Jun 19</td>
+                      <td>4.2.6</td>
+                      <td>21 Jul 19</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
