--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -89,6 +89,16 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>4.2.4</td>
+                            <td><a href="http://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.tar.gz.sha512">SHA512</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4.zip.sha512">SHA512</a>]
+                            </td>
+                            <td><a href="http://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.tar.gz.sha512">SHA512</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.4/apache-karaf-4.2.4-src.zip.sha512">SHA512</a>]
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344856')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>4.2.3</td>
                             <td><a href="http://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.tar.gz.sha512">SHA512</a>]<br>
                                 <a href="http://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.3/apache-karaf-4.2.3.zip.sha512">SHA512</a>]
