--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -82,9 +82,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.3</a>
+                <a class="text-dark">Karaf Runtime 4.2.5</a>
               </h3>
-              <div class="mb-1 text-muted">February 11, 2019</div>
+              <div class="mb-1 text-muted">April 21, 2019</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -104,6 +104,60 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.5 has been released ! <span class="text-muted">April 21, 2019</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add karaf:dockerfile & karaf:docker Maven goals</li>
+                  <li>Add SortedProperties class to karaf tooling</li>
+                  <li>Add principal info to audit logs</li>
+                  <li>Add MAX_CONCURRENT_SESSIONS option to Karaf ssh server</li>
+                  <li>Prevent relative path in config install command and ConfigMBean</li>
+                  <li>Introduce new property EnabledProtocals for org.apache.karaf.management.cfg</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>hibernate-validator</strong></td>
+                      <td>6.0.16.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax-jdbc</strong></td>
+                      <td>1.3.5</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax-transx</strong></td>
+                      <td>0.4.3</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Aries Blueprint Core</strong></td>
+                      <td>1.10.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Equinox</strong></td>
+                      <td>3.13.300</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Narayana</strong></td>
+                      <td>5.9.4.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Geronimo Connector</strong></td>
+                      <td>3.1.4</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345153" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.2.0 has been released ! <span class="text-muted">March 22, 2019</span></h3>
