Publish new blog post

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -386,6 +386,9 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-glasses"></i> Articles</h2>
 
               <div>
+                <a href="http://blog.nanthrax.net/?p=893">Apache Karaf dynamic and static approach, docker and kubernetes</a>
+              </div><!-- /.blog-post -->
+              <div>
                 <a href="http://blog.nanthrax.net/?p=874">Improvements on the Apache Karaf scheduler</a>
               </div><!-- /.blog-post -->
               <div>
