--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -82,9 +82,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.5</a>
+                <a class="text-dark">Karaf Runtime 4.2.6</a>
               </h3>
-              <div class="mb-1 text-muted">April 21, 2019</div>
+              <div class="mb-1 text-muted">June 10, 2019</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -104,6 +104,154 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.6 has been released ! <span class="text-muted">June 10, 2019</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add override property to <code>&lt;config/&gt;</code> in feature</li>
+                  <li>Add <code>web:install</code> command</li>
+                  <li>Add <code>spring-messaging</code> feature</li>
+                  <li>Add option to <code>feature:uninstall</code> to cleanup feature <code>configs/config-files</code></li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>felix-http</strong></td>
+                      <td>4.0.8</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax-Web</strong></td>
+                      <td>7.2.10</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Quartz</strong></td>
+                      <td>2.3.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>XBean</strong></td>
+                      <td>4.14</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix WebConsole MemoryUsage plugin</strong></td>
+                      <td>1.0.10</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Maven</strong></td>
+                      <td>3.6.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jansi</strong></td>
+                      <td>1.18</td>
+                    </tr>
+                    <tr>
+                      <td><strong>narayana</strong></td>
+                      <td>5.9.5.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jline</strong></td>
+                      <td>3.11.0</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax Web</strong></td>
+                      <td>7.2.9</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Jetty/strong></td>
+                      <td>9.4.18</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring Security</strong></td>
+                      <td>5.1.5.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>4.3.24.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>5.0.14.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>5.1.7.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Apache Felix Webconsole</strong></td>
+                      <td>4.3.12</td>
+                    </tr>
+                    <tr>
+                      <td><strong>equinox</strong></td>
+                      <td>3.12.100</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax Logging</strong></td>
+                      <td>1.10.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>ActiveMQ</strong></td>
+                      <td>5.15.9</td>
+                    </tr>
+                    <tr>
+                      <td><strong>aspectj</strong></td>
+                      <td>1.9.4</td>
+                    </tr>
+                    <tr>
+                      <td><strong>ant</strong></td>
+                      <td>1.10.5</td>
+                    </tr>
+                    <tr>
+                      <td><strong>cglib</strong></td>
+                      <td>3.2.9</td>
+                    </tr>
+                    <tr>
+                      <td><strong>JNA</strong></td>
+                      <td>5.3.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>commons-beanutils</strong></td>
+                      <td>1.9.3</td>
+                    </tr>
+                    <tr>
+                      <td><strong>commons-codec</strong></td>
+                      <td>1.12</td>
+                    </tr>
+                    <tr>
+                      <td><strong>commons-fileupload</strong></td>
+                      <td>1.4</td>
+                    </tr>
+                    <tr>
+                      <td><strong>commons-pool2</strong></td>
+                      <td>2.6.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jolokia</strong></td>
+                      <td>1.6.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>serp</strong></td>
+                      <td>1.15.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax JMS</strong></td>
+                      <td>1.0.4</td>
+                    </tr>
+                    <tr>
+                      <td><strong>bndlib</strong></td>
+                      <td>3.5.0</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345365" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.5 has been released ! <span class="text-muted">April 21, 2019</span></h3>
