Update schedule dates

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -183,7 +183,7 @@
                       <td class="text-success">On Development</td>
                       <td></td>
                       <td>4.3.0.RC1</td>
-                      <td>2 Mar 19</td>
+                      <td>Jul 19</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
@@ -192,7 +192,7 @@
                       <td class="text-success">Stable</td>
                       <td>4.2.6</td>
                       <td>4.2.7</td>
-                      <td>11 Sep 19</td>
+                      <td>Sep 19</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -201,7 +201,7 @@
                         <td class="text-success">Stable</td>
                         <td>4.1.7</td>
                         <td>4.1.8</td>
-                        <td>9 Feb 19</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
