--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Cave 4.2.0 has been released! (28/10/19)</strong> - This is the first minor release for Apache Cave 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Karaf 4.2.7 has been released! (29/09/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -123,13 +130,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Cellar 4.1.3 has been released! (25/2/19)</strong> - This is an update patch for Apache Cellar 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Runtime 4.2.3 has been released! (11/2/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -253,7 +253,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Manage your artifacts repositories with  <span class="text-muted">Karaf Cave.</span></h2>
             <p class="lead">Karaf Cave is an implementation of OSGi Repository specification. It can be used by the Karaf Features Resolver to provide resources, dealing with the requirements and capabilities of artifacts.</p>
-            <p>Last version <strong>4.1.2</strong> - (21/01/19)</p>
+            <p>Last version <strong>4.2.0</strong> - (28/10/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
