--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -804,6 +804,14 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>4.1.2</td>
+                            <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                            <td><a href="http://archive.apache.org/dist/karaf/cave/4.1.2/apache-karaf-cave-4.1.2-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.2-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.2-src.tar.gz.sha512">SHA512</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/cave/4.1.2/apache-karaf-cave-4.1.2-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.2-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.2-src.zip.sha512">SHA512</a>]
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344835')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>4.1.1</td>
                             <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                             <td><a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.1-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.1-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cave/4.1.1/apache-karaf-cave-4.1.1-src.tar.gz.sha512">SHA512</a>]<br>
