--- a/src/main/webapp/projects.html
+++ b/src/main/webapp/projects.html
@@ -109,9 +109,9 @@
               <h3 class="mb-0">
                 <a class="text-dark">Karaf Cave</a>
               </h3>
-              <p class="card-text mb-auto">Karaf Cave is an artefact repository.</p>
+              <p class="card-text mb-auto">Karaf Cave is an artifact repository.</p>
               <p>
-                <small class="text-muted">Latest 4.1.2 <a href="download.html"><i class="fas fa-download"></i></a></small>
+                <small class="text-muted">Latest 4.2.0 <a href="download.html"><i class="fas fa-download"></i></a></small>
               </p>
             </div>
           </div>
@@ -377,16 +377,16 @@
 
               <div class="col-md-6 offset-md-3">
                 <div class="bg-dark p-4 mb-2 mt-2 text-white text-center">
-                  Discovery
+                  Repository metadata
                 </div>
                 <div class="bg-secondary p-4 mb-2 mt-2 text-white text-center">
-                  Cluster groups
+                  Repository proxy and populate
                 </div>
                 <div class="bg-secondary p-4 mb-2 mt-2 text-white text-center">
-                  Sync and distribute resources
+                  Maven support
                 </div>
                 <div class="bg-primary p-4 mb-2 mt-2 text-white text-center">
-                  DOSGi
+                  Storage
                 </div>
               </div>
 
@@ -409,14 +409,14 @@
                   </div>
                   <div class="card">
                     <div class="card-body text-dark">
-                      <h5 class="card-title">Sync and distribute resources</h5>
+                      <h5 class="card-title">Maven support</h5>
                       <p class="card-text">Cave provides a complete Maven repository support.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-body text-dark">
-                      <h5 class="card-title">DOSGi</h5>
+                      <h5 class="card-title">Repository proxy and populate</h5>
                       <p class="card-text">In addition of a complete repository, Cave is able to proxy an existing repository, adding the metadata.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
