Update schedule dates

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -183,7 +183,7 @@
                       <td class="text-success">On Development</td>
                       <td></td>
                       <td>4.3.0.RC1</td>
-                      <td>Oct 19</td>
+                      <td>Dec '19</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
@@ -192,7 +192,7 @@
                       <td class="text-success">Stable</td>
                       <td>4.2.7</td>
                       <td>4.2.8</td>
-                      <td>Dec 21</td>
+                      <td>Dec '19</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -322,14 +322,14 @@
                       <td class="text-success">On Development</td>
                       <td></td>
                       <td>4.2.0</td>
-                      <td>Oct 2019</td>
+                      <td>Jan '19</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
                       <td>4.1.x / 4.2.x</td>
                       <td class="text-success">Stable</td>
                       <td>4.1.3</td>
-                      <td>Oct 2019</td>
+                      <td></td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
@@ -437,7 +437,7 @@
                       <td class="text-success">Stable</td>
                       <td>4.2.1</td>
                       <td>4.2.2</td>
-                      <td>Feb 2020</td>
+                      <td>Feb '20</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
@@ -524,7 +524,7 @@
                         <td class="text-success">Stable</td>
                         <td>2.2.0</td>
                         <td>2.3.0</td>
-                        <td>Oct 19</td>
+                        <td>Dec '19</td>
                     </tr>
                   </tbody>
                 </table>
